fix: remove overflow auto for JnDialogComponent

--- a/assets/css/jn_global_styles.css
+++ b/assets/css/jn_global_styles.css
@@ -95,6 +95,7 @@ W.I.P -> Work In Progress :)
   cursor: pointer;
   text-decoration: none;
   transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  padding: 0.5rem;
 }
 .btn:hover {
   color: inherit;
